<resources>
    <string name="app_name">Shuffallery</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_address">Email Address</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="forgotten_your_login_details">Forgotten your login details?</string>
    <string name="join_the_shuffallery_community">Join the Shuffallery Community!</string>
    <string name="sing_up">Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="join_the_shuffallery">Join the Shuffallery Community</string>
    <string name="user_name">User Name</string>
    <string name="confirm_email_address">Confirm Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="login_login">LogIn</string>
    <string name="with">with</string>
    <string name="log_in">Log In</string>
    <string name="please_enter_valid_email">Please enter valid email !</string>
    <string name="please_check">Please Check</string>
    <string name="check_in"></string>
    <string name="and">and</string>
    <string name="doesnt_match">doesn\'t match</string>
    <string name="check_in_email">Please check in your email</string>
    <string name="not_reset_password">You didn\'t reset your password !</string>
    <string name="please_wait">Please Wait !\nWe have to get your wallpaper...</string>
    <string name="cant_load">We can\'t upload your wallpaper !</string>
    <string name="password_valid">Password must be at least 8 characters in length</string>
    <string name="please_allow_permissions">Please Allow Permission</string>
    <string name="didnot_login">You didn\'t login to Shuffallery!\nPlease check your information.</string>
    <string name="google_signin_failed">Google SignIn Failed</string>
    <string name="failed_auth">Authentication Failed.</string>
    <string name="have_account">You have already an account !</string>
    <string name="cant_upload">We can\'t upload Your wallpaper</string>
    <string name="prepare_wallpaper">We can\'t prepare your wallpaper</string>
    <string name="wonderful">Please check your WONDERFUL wallpaper!</string>
    <string name="coin_number">Your Shuffale Coin is over!</string>
    <string name="retry">Please retry to set your wallpaper !</string>
    <string name="check_connection">Please check your internet connection !</string>
    <string name="logout">LogOut</string>
    <string name="wallpaper_info">Your Wallpaper\'s Information</string>
    <string name="cancel">Cancel</string>
    <string name="watch">Watch</string>
    <string name="shuffle">Shuffle</string>
    <string name="watch_add">Watch Add to Shuffle wallpapers!</string>
    <string name="exit">Exit Shuffallery</string>
    <string name="are_you_sure">Are you sure you want to exit!</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="while_preparing">Please wait while preparing your wallpaper ...</string>
    <string name="while_preparing_time">Please wait while preparing your wallpaper. \nIt may take some time... </string>
    <string name="no_internet">No Internet</string>
    <string name="please_wait_login">Please Wait!</string>
    <string name="check_pass">Please check your password!</string>
    <string name="invalid_email">Invalid Email Adress</string>
    <string name="another_email">Please try with another email address.\n This email address already exist !</string>
</resources>
