<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_red_300"
    android:orientation="vertical"
    tools:context=".activity.ResetPasswordActivity">

    <LinearLayout
        android:id="@+id/linearLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="15dp"
            android:src="@drawable/close" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/reset_password_padding"
            android:paddingEnd="@dimen/reset_password_padding">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/averia_sans_libre_light"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="@dimen/reset_password_title_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/averia_sans_libre_light"
                android:gravity="center"
                android:text="@string/reset_your_password"
                android:textColor="@color/md_grey_200"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/email_address"
                android:maxLines="1"
                android:padding="@dimen/edittext_inside_padding"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/md_grey_200"
                android:textCursorDrawable="@color/white" />

            <Button
                android:id="@+id/buttonResetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/reset_button"
                android:text="@string/reset_password"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingStart="@dimen/reset_password_padding"
            android:paddingTop="5dp"
            android:paddingEnd="@dimen/reset_password_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/averia_sans_libre_light"
                android:text="@string/join_the_shuffallery_community"
                android:textColor="@color/md_grey_200"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textViewSingUp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/averia_sans_libre_bold_italic"
                android:paddingStart="5dp"
                android:text="@string/sing_up"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/textViewPermission"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:gravity="center"
        android:text="@string/please_allow_permissions"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="gone" />
</LinearLayout>