<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/forest"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayoutMain"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_login"
                android:textColor="@color/md_grey_200"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/with"
                android:textColor="@color/md_grey_200"
                android:textSize="12sp"
                android:textStyle="italic" />

            <View
                android:layout_width="1dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@color/md_grey_300" />

            <ImageView
                android:id="@+id/imageViewGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:src="@drawable/google" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/md_grey_300" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/wellfleet"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/md_grey_300"
                android:textSize="45sp"
                app:autoSizeMaxTextSize="45sp"
                app:autoSizeMinTextSize="35sp"
                app:autoSizeStepGranularity="5sp"
                app:autoSizeTextType="uniform" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="@dimen/edittext_inside_padding"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/md_grey_300"
                    android:textCursorDrawable="@color/white" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/edittext_inside_padding"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/md_grey_300"
                    android:textCursorDrawable="@color/white" />

                <Button
                    android:id="@+id/buttonLogIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/singup_button"
                    android:text="@string/log_in"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/buttonSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/custom_singup_button"
                    android:text="@string/sing_up"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:fontFamily="@font/averia_sans_libre_light"
                        android:gravity="top"
                        android:text="@string/forgotten_your_login_details"
                        android:textColor="@color/md_grey_300"
                        android:textSize="13sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/textViewResetPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:fontFamily="@font/averia_sans_libre_bold_italic"
                        android:gravity="center"
                        android:paddingBottom="10dp"
                        android:paddingStart="5dp"
                        android:text="@string/reset_password"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewPermission"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:gravity="center"
        android:text="@string/please_allow_permissions"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="gone" />
</LinearLayout>